--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  
+    <script type="text/javascript" src="https://form.jotform.com/jsform/221592458772465"></script>
   </body>
 </html>
